# esp32_tool

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig.v1.0.2  sdkconfig.v1.0.3
components/battery/: CMakeLists.txt  battery.c  battery.h
components/cpost/: CMakeLists.txt  cpost_task.c  cpost_user_config.h
components/gui/: CMakeLists.txt  gui.c  gui.h  gui_common.c  gui_fs.c
components/hid_device/: CMakeLists.txt  ble_hidd.c
components/key/: CMakeLists.txt  Kconfig  key.c  key.h
components/launcher/: CMakeLists.txt  launcher.c  launcher.h
components/multimeter/: CMakeLists.txt  icon_app_multimeter.c  ina226.c  ina226.h  multimeter.c
components/protocol/: CMakeLists.txt  Kconfig  icon_app_pwm.c  icon_app_serial_debug.c  protocol_common.c  protocol_common.h  pwm.c  serial_debug.c  serial_debug_i2c.c  serial_debug_i2c.h  serial_debug_spi.c  serial_debug_spi.h  serial_debug_uart.c  serial_debug_uart.h
components/rtam/: CMakeLists.txt  rtam.lf  rtam_cfg_user.h
components/screensaver/: CMakeLists.txt  mech_watch.c  screensaver.c  screensaver.h  simple_time.c
components/setting/: CMakeLists.txt  icon_app_setting.c  icon_app_setting_about.c  icon_app_setting_brightness.c  icon_app_setting_bt.c  icon_app_setting_mechanice.c  icon_app_setting_screensaver.c  icon_app_setting_wifi.c  setting.c  setting.h  setting_about.c  setting_brightness.c  setting_common.c  setting_mechanice.c  setting_provider.c  setting_provider.h
components/shell/: CMakeLists.txt  shell_cfg_user.h  shell_port.c  shell_port.h
components/shell/extensions/shell_enhance/: shell_cmd_group.c  shell_passthrough.c  shell_passthrough.h
components/shell/src/: shell.h  shell_cfg.h
components/storage/: CMakeLists.txt  storage.c  storage.h
components/sys/: CMakeLists.txt  misc.c  misc.h  scan.c  smartconfig.c  smartconfig.h  station.c
components/test/: CMakeLists.txt  icon_app_test.c  test.c
components/usb_device/: CMakeLists.txt  usb_device.c
components/wireless/: CMakeLists.txt  icon_app_smartconfig.c  smartconfig.c  wifi_service.c
hardware/: esp32_tools.eprj
main/: CMakeLists.txt  export_keep.c  idf_component.yml  main.c
